[package]
name = "proxy-wasm-demo"
version = "0.1.0"
authors = ["Taisuke Miyazaki <imishinist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
proxy-wasm = "0.1.3"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
